--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <title>
       {% if page.title %}
-        {{ page.title }} ⊂
+        {{ page.title }} •
       {% endif %}
       Waypoints
     </title>
