--- a/_scss/_article.scss
+++ b/_scss/_article.scss
@@ -3,7 +3,7 @@ article {
   padding:10px 10px 10px 10px;
 
   code {
-    background:#ddd;
+    background:rgba(0,0,0,.1);
     padding:0 2px;
   }
 
