--- a/_scss/_monokai.scss
+++ b/_scss/_monokai.scss
@@ -1,4 +1,6 @@
-.highlight { background: rgb(39,40,34); color: #f8f8f2; overflow:auto; }
+.highlight { background: rgb(39,40,34); color: #f8f8f2; }
+.highlight + .highlight { border-top:1px solid rgba(255,255,255,.3); }
+.highlight pre { white-space:pre-wrap; }
 .highlight .hll { background-color: #49483e }
 .highlight .c { color: #75715e } /* Comment */
 .highlight .err { color: #960050; background-color: #1e0010 } /* Error */
