--- a/css/styles.css
+++ b/css/styles.css
@@ -494,8 +494,13 @@ header {
 
 .highlight {
   background: #272822;
-  color: #f8f8f2;
-  overflow: auto; }
+  color: #f8f8f2; }
+
+.highlight + .highlight {
+  border-top: 1px solid rgba(255, 255, 255, 0.3); }
+
+.highlight pre {
+  white-space: pre-wrap; }
 
 .highlight .hll {
   background-color: #49483e; }
@@ -909,6 +914,23 @@ article {
 
 .np-next {
   background: blue; }
+
+#overflow-scroll, #overflow-scroll-offset {
+  overflow: scroll;
+  height: 300px;
+  background: #aaa; }
+
+#context-example {
+  background: #555;
+  color: #fff;
+  height: 600px;
+  margin-top: 150px; }
+
+#context-example-offset {
+  background: #555;
+  color: #fff;
+  height: 600px;
+  margin-top: 200px; }
 
 @media (min-width: 660px) {
   .reference {
