--- a/_scss/_waypoint.scss
+++ b/_scss/_waypoint.scss
@@ -1,22 +1,7 @@
 .waypoint {
-  animation:pulse 3s infinite;
+  box-shadow:0 0 0 5px rgba($complementColor, .5);
 
   &.disabled {
-    animation:none;
     box-shadow: 0 0 0 5px rgba($errorColor, 0.8);
-  }
-}
-
-@keyframes pulse {
-  0% {
-    box-shadow:0 0 0 0 rgba($complementColor, .8);
-  }
-
-  50% {
-    box-shadow:0 0 0 10px rgba($complementColor, 0);
-  }
-
-  100% {
-    box-shadow:0 0 0 0 rgba($complementColor, 0);
   }
 }
