--- a/css/styles.css
+++ b/css/styles.css
@@ -910,9 +910,9 @@ article {
     padding: 0 10px 0 0; }
 
 #overflow-scroll, #overflow-scroll-offset {
-  overflow: scroll;
+  overflow: auto;
   height: 300px;
-  background: #aaa; }
+  background: rgba(0, 0, 0, 0.1); }
 
 #context-example {
   background: #555;
@@ -925,6 +925,14 @@ article {
   color: #fff;
   height: 600px;
   margin-top: 200px; }
+
+#horizontal-waypoint, #horizontal-waypoint-offset {
+  width: 1000px;
+  height: 100%;
+  padding: 10px;
+  margin-left: 150px;
+  background: #555;
+  color: #fff; }
 
 @media (min-width: 660px) {
   .reference {
