--- a/css/styles.css
+++ b/css/styles.css
@@ -746,7 +746,7 @@ header {
 .waypoint {
   box-shadow: 0 0 0 5px rgba(104, 164, 43, 0.5); }
   .waypoint.disabled {
-    box-shadow: 0 0 0 5px rgba(192, 52, 52, 0.8); }
+    box-shadow: 0 0 0 5px rgba(192, 52, 52, 0.5); }
 
 .about-main {
   text-align: center;
@@ -816,9 +816,11 @@ article {
   padding: 10px 10px 10px 10px; }
   article code {
     background: rgba(0, 0, 0, 0.1);
-    padding: 0 2px; }
+    padding: 0 2px;
+    font-size: 0.875em; }
   article pre > code {
-    background: transparent; }
+    background: transparent;
+    font-size: 1em; }
   article h3 {
     color: #666;
     font-weight: 300;
