--- a/_scss/_api.scss
+++ b/_scss/_api.scss
@@ -142,7 +142,7 @@
   margin-top:200px;
 }
 
-#horizontal-waypoint, #horizontal-waypoint-offset {
+#horizontal-waypoint, #horizontal-waypoint-offset, #handler-horizontal {
   width:1000px;
   height:100%;
   padding:10px;
