--- a/_includes/api_nav.html
+++ b/_includes/api_nav.html
@@ -1,52 +1,52 @@
 <ul class="subsection-nav api-nav on-{{ page.subsection }}">
   <li>
-    <a href="{{ site.url }}/api/waypoint" class="nav-waypoint">Waypoint</a>
+    <a href="../waypoint" class="nav-waypoint">Waypoint</a>
     <h3 class="subheading">Options</h3>
     <ul>
-      <li><a href="{{ site.url }}/api/context-option" class="nav-context-option">context</a></li>
-      <li><a href="{{ site.url }}/api/continuous-option" class="nav-continuous-option">continuous</a></li>
-      <li><a href="{{ site.url }}/api/enabled-option" class="nav-enabled-option">enabled</a></li>
-      <li><a href="{{ site.url }}/api/group-option" class="nav-group-option">group</a></li>
-      <li><a href="{{ site.url }}/api/horizontal-option" class="nav-horizontal-option">horizontal</a></li>
-      <li><a href="{{ site.url }}/api/offset-option" class="nav-offset-option">offset</a></li>
-      <li><a href="{{ site.url }}/api/trigger-once-option" class="nav-trigger-once-option">triggerOnce</a></li>
+      <li><a href="../context-option" class="nav-context-option">context</a></li>
+      <li><a href="../continuous-option" class="nav-continuous-option">continuous</a></li>
+      <li><a href="../enabled-option" class="nav-enabled-option">enabled</a></li>
+      <li><a href="../group-option" class="nav-group-option">group</a></li>
+      <li><a href="../handler-option" class="nav-handler-option">handler</a></li>
+      <li><a href="../horizontal-option" class="nav-horizontal-option">horizontal</a></li>
+      <li><a href="../offset-option" class="nav-offset-option">offset</a></li>
     </ul>
     <h3 class="subheading">Instance Methods</h3>
     <ul>
-      <li><a href="{{ site.url }}/api/destroy" class="nav-destroy">destroy</a></li>
-      <li><a href="{{ site.url }}/api/disable" class="nav-disable">disable</a></li>
-      <li><a href="{{ site.url }}/api/enable" class="nav-enable">enable</a></li>
-      <li><a href="{{ site.url }}/api/next" class="nav-next">next</a></li>
-      <li><a href="{{ site.url }}/api/previous" class="nav-previous">previous</a></li>
+      <li><a href="../destroy" class="nav-destroy">destroy</a></li>
+      <li><a href="../disable" class="nav-disable">disable</a></li>
+      <li><a href="../enable" class="nav-enable">enable</a></li>
+      <li><a href="../next" class="nav-next">next</a></li>
+      <li><a href="../previous" class="nav-previous">previous</a></li>
     </ul>
     <h3 class="subheading">Class Methods</h3>
     <ul>
-      <li><a href="{{ site.url }}/api/destroy-all" class="nav-destroy-all">destroyAll</a></li>
-      <li><a href="{{ site.url }}/api/refresh-all" class="nav-refresh-all">refreshAll</a></li>
-      <li><a href="{{ site.url }}/api/viewport-height" class="nav-viewport-height">viewportHeight</a></li>
-      <li><a href="{{ site.url }}/api/viewport-width" class="nav-viewport-width">viewportWidth</a></li>
+      <li><a href="../destroy-all" class="nav-destroy-all">destroyAll</a></li>
+      <li><a href="../refresh-all" class="nav-refresh-all">refreshAll</a></li>
+      <li><a href="../viewport-height" class="nav-viewport-height">viewportHeight</a></li>
+      <li><a href="../viewport-width" class="nav-viewport-width">viewportWidth</a></li>
     </ul>
   </li>
 
   <li>
-    <a href="{{ site.url }}/api/context" class="nav-context">Waypoint.Context</a>
+    <a href="../context" class="nav-context">Waypoint.Context</a>
     <h3 class="subheading">Instance Methods</h3>
     <ul>
-      <li><a href="{{ site.url }}/api/context-destroy" class="nav-context-destroy">destroy</a></li>
-      <li><a href="{{ site.url }}/api/context-refresh" class="nav-context-refresh">refresh</a></li>
+      <li><a href="../context-destroy" class="nav-context-destroy">destroy</a></li>
+      <li><a href="../context-refresh" class="nav-context-refresh">refresh</a></li>
     </ul>
     <h3 class="subheading">Class Methods</h3>
     <ul>
-      <li><a href="{{ site.url }}/api/context-find-by-element" class="nav-context-find-by-element">findByElement</a></li>
+      <li><a href="../context-find-by-element" class="nav-context-find-by-element">findByElement</a></li>
     </ul>
   </li>
 
   <li>
-    <a href="{{ site.url }}/api/group" class="nav-group">Waypoint.Group</a>
+    <a href="../group" class="nav-group">Waypoint.Group</a>
     <h3 class="subheading">Instance Methods</h3>
     <ul>
-      <li><a href="{{ site.url }}/api/first" class="nav-first">first</a></li>
-      <li><a href="{{ site.url }}/api/last" class="nav-last">last</a></li>
+      <li><a href="../first" class="nav-first">first</a></li>
+      <li><a href="../last" class="nav-last">last</a></li>
     </ul>
   </li>
 </ul>
