--- a/css/styles.css
+++ b/css/styles.css
@@ -915,6 +915,19 @@ article {
   .continuous-group-column:first-child {
     padding: 0 10px 0 0; }
 
+.destroy-all-waypoint {
+  height: 100px;
+  background: #555;
+  color: #fff;
+  padding: 10px;
+  margin: 15px 0; }
+
+.added {
+  height: 100px;
+  background: #ccc;
+  padding: 10px;
+  margin: 15px 0; }
+
 #overflow-scroll, #overflow-scroll-offset {
   overflow: auto;
   height: 300px;
@@ -939,6 +952,13 @@ article {
   margin-left: 150px;
   background: #555;
   color: #fff; }
+
+#refresh-all-waypoint {
+  height: 100px;
+  padding: 10px;
+  background: #555;
+  color: #fff;
+  margin: 15px 0; }
 
 @media (min-width: 660px) {
   .reference {
