--- a/_scss/_api.scss
+++ b/_scss/_api.scss
@@ -137,6 +137,26 @@
   margin:15px 0;
 }
 
+.context-destroy-container {
+  @extend %clearfix;
+}
+
+.left-context-waypoint, .right-context-waypoint {
+  height:600px;
+  margin-bottom:20px;
+  padding:10px;
+}
+
+.left-context-waypoint {
+  background:#555;
+  color:#fff;
+}
+
+.right-context-waypoint {
+  background:#ccc;
+  color:#000;
+}
+
 #overflow-scroll, #overflow-scroll-offset {
   overflow:auto;
   height:300px;
@@ -146,7 +166,7 @@
 #context-example {
   background:#555;
   color:#fff;
-  height:600px;
+  height:400px;
   margin-top:150px;
 }
 
@@ -172,6 +192,24 @@
   background:#555;
   color:#fff;
   margin:15px 0;
+}
+
+#left-context {
+  float:left;
+  width:50%;
+  padding-right:10px;
+  height:300px;
+  overflow:auto;
+  padding-top:20px;
+}
+
+#right-context {
+  float:right;
+  width:50%;
+  padding-left:10px;
+  height:300px;
+  overflow:auto;
+  padding-top:20px;
 }
 
 @include desktop {
