context find by element

--- a/_scss/_api.scss
+++ b/_scss/_api.scss
@@ -163,10 +163,11 @@
   background:rgba(0,0,0,.1);
 }
 
-#context-example {
+#context-example, #find-by-example {
   background:#555;
   color:#fff;
   height:400px;
+  padding:10px;
   margin-top:150px;
 }
 
@@ -174,6 +175,7 @@
   background:#555;
   color:#fff;
   height:600px;
+  padding:10px;
   margin-top:200px;
 }
 
