--- a/_includes/guides_nav.html
+++ b/_includes/guides_nav.html
@@ -1,6 +1,6 @@
 <ul class="subsection-nav on-{{ page.subsection }}">
   <li><a href="{{ site.url }}/guides/getting-started" class="nav-getting-started">Getting Started</a></li>
   <li><a href="{{ site.url }}/guides/jquery-waypoints" class="nav-jquery-waypoints">jQuery Waypoints</a></li>
-  <li><a href="{{ site.url }}/guides/creating-adapters" class="nav-creating-adapters">Creating Adapters</a></li>
+  <li><a href="{{ site.url }}/guides/adapters" class="nav-adapters">Adapters</a></li>
   <li><a href="{{ site.url }}/guides/debugging-waypoints" class="nav-debugging-waypoints">Debugging Waypoints</a></li>
 </ul>
