--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,6 +23,7 @@
     <ul class="notifications"></ul>
     <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
     <script src="{{ site.url }}/js/jquery.waypoints.min.js"></script>
+    <script src="{{ site.url }}/js/sticky.min.js"></script>
     <script src="{{ site.url }}/js/scripts.js"></script>
   </body>
 </html>
