--- a/_scss/_api.scss
+++ b/_scss/_api.scss
@@ -179,6 +179,10 @@
 
 .properties-container {
   @extend %clearfix;
+
+  .highlight {
+    overflow:hidden;
+  }
 }
 
 #overflow-scroll, #overflow-scroll-offset {
