--- a/_scss/_article.scss
+++ b/_scss/_article.scss
@@ -22,6 +22,14 @@ article {
     font-weight:300;
     font-size:24px;
   }
+
+  ul .highlight {
+    margin:8px 0;
+  }
+
+  > h3, > h4 {
+    padding-top:24px;
+  }
 }
 
 @include desktop {
