--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,6 +25,7 @@
     <script src="{{ site.url }}/js/jquery.waypoints.min.js"></script>
     <script src="{{ site.url }}/js/sticky.min.js"></script>
     <script src="{{ site.url }}/js/infinite.min.js"></script>
+    <script src="{{ site.url }}/js/inview.min.js"></script>
     <script src="{{ site.url }}/js/scripts.js"></script>
   </body>
 </html>
