--- a/css/styles.css
+++ b/css/styles.css
@@ -510,7 +510,8 @@ header {
   border-top: 1px solid rgba(255, 255, 255, 0.3); }
 
 .highlight pre {
-  white-space: pre-wrap; }
+  white-space: pre-wrap;
+  word-wrap: break-word; }
 
 .highlight pre code {
   white-space: pre-wrap;
@@ -777,16 +778,60 @@ header {
 .or {
   color: #999;
   font-size: 12px;
-  margin: 12px 0; }
+  margin: 20px 0; }
   .or:before, .or:after {
     content: '-';
     padding: 0 1px; }
 
 .one-liner {
-  border: 1px solid rgba(0, 0, 0, 0.1); }
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  padding-top: 8px;
+  padding-bottom: 7px; }
 
-.download p:first-child, .introduction p:first-child {
+.introduction p:first-child {
   margin-top: 0; }
+
+.about-links {
+  list-style: none;
+  padding: 0;
+  margin-top: 32px; }
+  .about-links > li {
+    display: inline-block; }
+  .about-links a {
+    display: block;
+    text-decoration: none;
+    font-size: 14px;
+    width: 100px; }
+    .about-links a span {
+      display: block;
+      margin-top: 4px; }
+    .about-links a:hover svg {
+      fill: #68a42b; }
+  .about-links svg {
+    width: 18px;
+    height: 18px;
+    fill: #348ec0; }
+
+.flavor-requirements {
+  list-style: none;
+  padding: 0;
+  display: inline-block; }
+  .flavor-requirements > li {
+    display: inline-block;
+    padding-left: 40px;
+    font-size: 14px;
+    color: #888; }
+    .flavor-requirements > li:first-child {
+      padding-left: 0; }
+  .flavor-requirements span {
+    display: block;
+    font-size: 16px;
+    font-weight: bold;
+    padding-bottom: 4px;
+    color: #555; }
+  .flavor-requirements .jquery svg {
+    width: 120px;
+    height: 30px; }
 
 @media (min-width: 660px) {
   .introduction {
@@ -797,9 +842,8 @@ header {
   .download {
     float: right;
     width: 50%;
-    padding-left: 15px; }
-  .introduction p:first-child {
-    margin-top: 16px; } }
+    padding-left: 15px;
+    padding-top: 54px; } }
 
 .notifications {
   position: fixed;
