--- a/_scss/_subsection.scss
+++ b/_scss/_subsection.scss
@@ -1,5 +1,5 @@
 $sections:
-  (getting-started, jquery-waypoints, adapters, debugging-waypoints),
+  (getting-started, jquery-zepto, adapters, debugging),
   (sticky-elements, infinite-scroll, inview),
   (context, context-destroy, context-find-by-element, context-option, context-refresh, continuous-option, destroy, destroy-all, disable, enable, enabled-option, first, group, group-option, handler-option, horizontal-option, last, next, offset-option, previous, refresh-all, viewport-height, viewport-width, waypoint);
 
